# opcoes

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: constraints.txt  release.yml  tests.yml
notebooks/: Fat tails and their impact on option prices.ipynb  How to delta hedge an option Part I.ipynb  How to delta hedge an option Part II.ipynb  How to delta hedge an option Part III.ipynb  How to delta hedge an option Part IV.ipynb  How to delta hedge an option Part V.ipynb  How to delta hedge an option.ipynb  How to mis-hedge an option.ipynb  How to sample from a custom probability distribution.ipynb  Random Sampling with SciPy and NumPy Part I.ipynb  Random Sampling with SciPy and NumPy Part II.ipynb  Random Sampling with SciPy and NumPy Part III.ipynb  Test Notebook.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  Untitled7.ipynb  Untitled8.ipynb  What is the 'risk neutral measure'?.ipynb  Why we use log returns for stock returns.ipynb  asset_data.csv  spx_quotedata.csv
src/opcoes/: black_scholes.py  replication.py  simulation.py
tests/: test_black_scholes.py  test_opcoes.py
