[virtualenvs]
create = true
in-project = true

[tool.poetry]
name = "opcoes"
version = "0.1.0"
description = ""
authors = ["mjam03 <markjamison03@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jupyterlab = "^3.3.0"
scipy = "^1.8.0"
seaborn = "^0.11.2"
numpy = "^1.22.2"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter-to-medium = "^0.2.10"
flake8 = "^4.0.1"
black = "^22.1.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
