[virtualenvs]
create = true
in-project = true

[tool.poetry]
name = "opcoes"
version = "0.1.0"
description = ""
authors = ["mjam03 <markjamison03@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scipy = "^1.8.0"
numpy = "^1.22.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
jupyter = "^1.0.0"
jupyterlab = "^3.6.2"
flake8 = "^6.0.0"
black = "^23.1.0"
nox = "^2022.11.21"
nox-poetry = "^1.0.2"
coverage = {version = "^6.4.1", extras = ["toml"]}
pytest-cov = "^4.0.0"
pylint = "^2.17.1"
bandit = "^1.7.5"
pre-commit = "^3.2.0"
mypy = "^1.1.1"
types-requests = "^2.28.11.16"
coveralls = "^3.3.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
